--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -93,159 +93,167 @@
                     </button>
                 </div>
 
-                <ul class="full-menu__list">
-                    <li class="full-menu__col">
-                        <div class="full-menu__item">
-                            <a href="#" class="full-menu__link full-menu__link--main">Компания</a>
-                        </div>
-                        <ul class="full-menu__group">
+                <div class="full-menu__list">
+                    <div class="col-12 col-xl-3 col-lg-4">
+                        <div class="full-menu__col">
+                            <div class="full-menu__item">
+                                <a href="#" class="full-menu__link full-menu__link--main">Компания</a>
+                            </div>
+                            <ul class="full-menu__group">
 
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">ОМК</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Миссия</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Годовой цикл</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Благотворительность</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Социальная ответственность</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Фирменный стиль</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Реквизиты</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Годовой отчёт</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Здоровье</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Ценности</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Вакансии</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="full-menu__col">
-                        <div class="full-menu__item">
-                            <a href="#" class="full-menu__link full-menu__link--main">Сотрудникам</a>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">ОМК</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Миссия</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Годовой цикл</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Благотворительность</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Социальная ответственность</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Фирменный стиль</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Реквизиты</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Годовой отчёт</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Здоровье</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Ценности</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Вакансии</a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="full-menu__group">
+                    </div>
+                    <div class="col-12 col-xl-3 col-lg-4">
+                        <div class="full-menu__col">
+                            <div class="full-menu__item">
+                                <a href="#" class="full-menu__link full-menu__link--main">Сотрудникам</a>
+                            </div>
+                            <ul class="full-menu__group">
 
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Справочник</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Мои системы</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Горячая линия</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Вопрос руководствуь</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Безопасность</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Обучение</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Баташевская премия</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Идеи</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Скидки</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Мои документы</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Объявления</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="full-menu__col">
-                        <div class="full-menu__item">
-                            <a href="#" class="full-menu__link full-menu__link--main">Новости</a>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Справочник</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Мои системы</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Горячая линия</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Вопрос руководствуь</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Безопасность</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Обучение</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Баташевская премия</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Идеи</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Скидки</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Мои документы</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Объявления</a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="full-menu__group">
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Лента</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">ОМК ТВ</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Статьи из прессы</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Журнал</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Газета</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="full-menu__col">
-                        <div class="full-menu__item">
-                            <a href="#" class="full-menu__link full-menu__link--main">Производственная система</a>
+                    </div>
+                    <div class="col-12 col-xl-3 col-lg-4">
+                        <div class="full-menu__col">
+                            <div class="full-menu__item">
+                                <a href="#" class="full-menu__link full-menu__link--main">Новости</a>
+                            </div>
+                            <ul class="full-menu__group">
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Лента</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">ОМК ТВ</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Статьи из прессы</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Журнал</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Газета</a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="full-menu__group">
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Обходы</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Лучшие практики</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link full-menu__link--select">Предложить инициативу</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="full-menu__col">
-                        <div class="full-menu__item full-menu__item--gray-mob">
-                            <a href="#" class="full-menu__link">Еще</a>
+                        <div class="full-menu__col">
+                            <div class="full-menu__item">
+                                <a href="#" class="full-menu__link full-menu__link--main">Производственная система</a>
+                            </div>
+                            <ul class="full-menu__group">
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Обходы</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Лучшие практики</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link full-menu__link--select">Предложить инициативу</a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="full-menu__group full-menu__group--gray">
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">FAQ</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Помощь</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Сообщить об ошибке</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Доска почёта</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Профком</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Конкурсы</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Народная дружина</a>
-                            </li>
-                            <li class="full-menu__item">
-                                <a href="#" class="full-menu__link">Другое</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                    </div>
+                    <div class="col-12 col-xl-3 col-lg-12">
+                        <div class="full-menu__col full-menu__col--gray">
+                            <div class="full-menu__item full-menu__item--gray-mob">
+                                <a href="#" class="full-menu__link">Еще</a>
+                            </div>
+                            <ul class="full-menu__group full-menu__group--gray">
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">FAQ</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Помощь</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Сообщить об ошибке</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Доска почёта</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Профком</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Конкурсы</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Народная дружина</a>
+                                </li>
+                                <li class="full-menu__item">
+                                    <a href="#" class="full-menu__link">Другое</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
