part of fixes after design checks

--- a/src/blocks/modules/profile-active-modal/profile-active-modal.html
+++ b/src/blocks/modules/profile-active-modal/profile-active-modal.html
@@ -14,11 +14,11 @@
                             <form action="#0">
                                 <div class="controls-form__inner">
                                     <label class="controls-form__item">
-                                        <input type="checkbox" class="controls-form__input" checked>
+                                        <input type="radio" name="profile_active_radios" class="controls-form__input" checked>
                                         <span class="controls-form__text">Подразделение</span>
                                     </label>
                                     <label class="controls-form__item">
-                                        <input type="checkbox" class="controls-form__input">
+                                        <input type="radio" name="profile_active_radios" class="controls-form__input">
                                         <span class="controls-form__text">Топ-100</span>
                                     </label>
                                 </div>
