--- a/src/blocks/modules/profile-edit/profile-edit.html
+++ b/src/blocks/modules/profile-edit/profile-edit.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="edit-photo__buttons">
-                        <button type="reset" class="btn btn--secondary">Отменить</button>
+                        <button type="reset" class="btn btn--secondary js-photo-reset">Отменить</button>
                         <button type="submit" class="btn btn--primary">Сохранить</button>
                     </div>
 
