--- a/src/blocks/modules/profile-active-modal/profile-active-modal.html
+++ b/src/blocks/modules/profile-active-modal/profile-active-modal.html
@@ -29,10 +29,14 @@
                 </div>
             </div>
             <table class="active-modal__table js-active-modal__table">
-                <tr>
+                <tr class="active-modal__table-head">
                     <th>ФИО</th>
                     <th>Рейтинг</th>
                     <th>Награды</th>
+                </tr>
+                <tr class="active-modal__table-head active-modal__table-head--mobile">
+                    <th>ФИО</th>
+                    <th colspan="2">Рейтинг и награды</th>
                 </tr>
                 <tr>
                     <td>Сковородникова Лариса Борисовна</td>
