--- a/src/blocks/modules/profile-edit/profile-edit.html
+++ b/src/blocks/modules/profile-edit/profile-edit.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="edit-photo__info">
                         <label class="file js-photo-file">
-                            <input type="file" class="file-input">
+                            <input type="file" class="file-input js-edit-photo-input">
                             <span class="btn btn--secondary file-btn">Загрузить фото</span>
                         </label>
 
@@ -107,7 +107,7 @@
 
                     <div class="edit-photo__buttons">
                         <button type="reset" class="btn btn--secondary js-photo-reset">Отменить</button>
-                        <button type="submit" class="btn btn--primary">Сохранить</button>
+                        <button type="submit" class="btn btn--primary js-edit-photo-submit" disabled>Сохранить</button>
                     </div>
 
                     <div class="edit-photo__message">Пожалуйста загружайте фото, на которых вас возможно узнать</div>
