--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -62,7 +62,7 @@
                         </ul>
                         <ul class="user-popup__menu-group">
                             <li class="user-popup__menu-item user-popup__menu-item--add">
-                                <a href="#">Добавить объявление</a>
+                                <a href="#" class="js-ads-add">Добавить объявление</a>
                             </li>
                             <li class="user-popup__menu-item user-popup__menu-item--add">
                                 <a href="#">Написать в блог</a>
