fixes after review

--- a/src/blocks/modules/profile-active-modal/profile-active-modal.html
+++ b/src/blocks/modules/profile-active-modal/profile-active-modal.html
@@ -6,7 +6,7 @@
                     title="Закрыть"></button>
         </div>
         <div class="modal-content">
-            <h3 class="modal-title">Актив предприятия</h3>
+            <h3 class="modal-title js-active-modal-title">Актив предприятия</h3>
             <div class="controls js-controls">
                 <div class="controls-content js-controls-content">
                     <div class="controls-inner js-controls-inner">
