--- a/src/blocks/modules/profile-edit/profile-edit.html
+++ b/src/blocks/modules/profile-edit/profile-edit.html
@@ -6,7 +6,7 @@
                     title="Закрыть"></button>
         </div>
         <div class="modal-content">
-            <h3 class="edit-title">Редактирование профиля</h3>
+            <h3 class="edit-title js-edit-title">Редактирование профиля</h3>
             <form action="#0">
                 <div class="edit-form">
                     <button type="button" class="edit-form__photo-btn js-edit-form__photo-btn">
@@ -77,7 +77,7 @@
                     title="Закрыть"></button>
         </div>
         <div class="modal-content">
-            <h3 class="edit-title">Фото пользователя</h3>
+            <h3 class="edit-title js-edit-title">Фото пользователя</h3>
             <form action="#0">
                 <div class="edit-photo">
                     <div class="edit-photo__preview js-edit-photo__preview">
