--- a/src/blocks/modules/regards-modal/regards-modal.html
+++ b/src/blocks/modules/regards-modal/regards-modal.html
@@ -6,7 +6,7 @@
                     title="Закрыть"></button>
         </div>
         <div class="modal-content">
-            <h3 class="modal-title">
+            <h3 class="modal-title js-regards-title">
                 Награды
                 <span class="count">12</span>
             </h3>
