add icon archive  and fix table scroll mobile

--- a/src/blocks/modules/document-list/document-list.html
+++ b/src/blocks/modules/document-list/document-list.html
@@ -48,6 +48,15 @@
     </a>
     <a href="#0" download class="document-list__item">
         <span class="document-list__logo">
+            <img src="img/archive.svg" alt="">
+        </span>
+        <span class="document-list__content">
+            <span class="name">Archive (1) copy</span>
+            <span class="size">ZIP (9,3 КБ)</span>
+        </span>
+    </a>
+    <a href="#0" download class="document-list__item">
+        <span class="document-list__logo">
             <img src="img/esp.svg" alt="">
         </span>
         <span class="document-list__content">
